# ComfyUI_toyxyz_test_nodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.bat  toyxyz_test_nodes.py  visual_area_mask.py
.github/workflows/: publish_action.yml
CaptureCam/: Run_hide_cmd.vbs  cam.py  requirements.txt  run.bat  setup.bat
ComfyCouple/: Extractor.py  Visualizer.py  anima_atten_multi.py  comfy_couple.py  couple_anima_patching.py  couple_flux_patching.py  couple_patching.py  couple_strategies.py  couple_utils.py
ComfyCouple/flux_injection/: __init__.py  layers.py  model.py
TiledDiffusion/: __init__.py  td_hooks.py  tiled_diffusion.py
example_workflow/: ComfyCouple Region_sdxl.json  ComfyCouple Region_sdxl_extractor_inpaint.json  ComfyCouple Region_sdxl_tiled.json
nodes/: crop_area_mask.py  draw_area_mask.py  toyxyz_test_nodes.py  visual_area_mask.py
openposeeditor/: openpose_editor_nodes.py  poseinter.py  util.py
web/: crop_area_mask.js  draw_area_mask.js  visual_area_prompt.js
web/util/: util.js
web/widgets/: graph_widget.js
workflow/: wan_2_1_vace_loop_vid.json
