[project]
name = "pr-comfyui_toyxyz_test_nodes-8c8f6b17"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy", "torch", "opencv-python"]

[project.urls]
Repository = "https://github.com/haohaocreates/PR-ComfyUI_toyxyz_test_nodes-8c8f6b17"

[tool.comfy]
PublisherId = ""
DisplayName = "PR-ComfyUI_toyxyz_test_nodes-8c8f6b17"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
