[project]
name = "comfyui_toyxyz_test_nodes"
description = "This is a custom node that collects the tools I use frequently."
version = "1.0.6"
license = { file = "LICENSE" }
dependencies = ["numpy", "torch", "opencv-python"]

[project.urls]
Repository = "https://github.com/toyxyz/ComfyUI_toyxyz_test_nodes"

[tool.comfy]
PublisherId = "toyxyz"
DisplayName = "ComfyUI_toyxyz_test_nodes"
Icon = ""
